--- a/public/css/_msg.css
+++ b/public/css/_msg.css
@@ -27,6 +27,12 @@
 	border-left: 6px solid #02a3c6;
 }
 
+.msg-reply .msg-item {
+	padding: 0.9em 0;
+	border-left: 0;
+	border-right: 0;
+}
+
 .msg-detail-control {
 	border-bottom: 1px solid #ddd;
 	padding: .5em 2em;
@@ -67,5 +73,5 @@
 }
 
 .msg-detail-reply {
-	margin-left: 80px;
+	margin-left: 72px;
 }
