--- a/public/css/base.css
+++ b/public/css/base.css
@@ -40,7 +40,7 @@ a {
 	text-align: left;
 	border-bottom: 1px rgb(84, 91, 114) solid;
 	padding-bottom: 20px;
-	margin: 0 20px;
+	margin: 0 1em;
 }
 
 #nav #accountStatus .account-nick,
