--- a/public/css/_msg.css
+++ b/public/css/_msg.css
@@ -94,6 +94,17 @@
 	margin-left: 72px;
 }
 
+.msg-detail-toolbar {
+	position: absolute;
+	margin-left: 0;
+	margin-top: 1em;
+}
+
+.msg-detail-toolbar .pure-button {
+	padding: 2px 4px;
+	margin: 2px;
+}
+
 .msg-form input {
 	font-size: 90%;
 }
