--- a/public/css/pure.ext.css
+++ b/public/css/pure.ext.css
@@ -82,3 +82,19 @@
 	font-size: 110%;
 	color: rgb(75, 113, 151);
 }
+
+.button-twice-first {
+	display: inherit;
+}
+
+.button-twice-second {
+	display: none;
+}
+
+.button-twice .button-twice-first {
+	display: none;
+}
+
+.button-twice .button-twice-second {
+	display: inherit;
+}
